# mipt-gamedev-networks

./: CMakeLists.txt  thirdparty.cmake
hw1/: CMakeLists.txt  client.cpp  server.cpp  socket_tools.cpp
hw2/: CMakeLists.txt  client.cpp  lobby.cpp  packet.h  server.cpp
hw5/: CMakeLists.txt  client.cpp  lobby.cpp  server.cpp
hw5/common/: Allegro.hpp  AsyncInput.hpp  Service.hpp  assert.hpp  common.hpp  delta.hpp  proto.hpp
hw5/game/: Entity.cpp  Entity.hpp  gameProto.hpp
